--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "./dist/index.js",
   "description": "Vite plugin to transform SVG files into css/less/sass inline image",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p .",
     "dev": "tsc -w -p ."
