--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
   "name": "vite-plugin-cssvg",
-  "version": "0.0.1",
-  "main": "./dist/index.js",
+  "version": "1.0.0",
   "description": "Vite plugin to transform SVG files into css/less/sass inline image",
+  "keywords": [
+    "transform SVG",
+    "css",
+    "css inside",
+    "svg inline"
+  ],
+  "repository": "https://github.com/MySetsuna/vite-plugin-cssvg",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p .",
     "dev": "tsc -w -p ."
+  },
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
   },
   "devDependencies": {
     "@rollup/pluginutils": "^5.0.5",
